// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateStateH can generate fixture ARRAY_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/ARRAY_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ArrayPropsNativeComponentState {
public:
  
  ArrayPropsNativeComponentState() = default;

  

#ifdef ANDROID
  ArrayPropsNativeComponentState(ArrayPropsNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ArrayPropsNativeComponentState {
public:
  
  ArrayPropsNativeComponentState() = default;

  

#ifdef ANDROID
  ArrayPropsNativeComponentState(ArrayPropsNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/BOOLEAN_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class BooleanPropNativeComponentState {
public:
  
  BooleanPropNativeComponentState() = default;

  

#ifdef ANDROID
  BooleanPropNativeComponentState(BooleanPropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COLOR_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COLOR_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ColorPropNativeComponentState {
public:
  
  ColorPropNativeComponentState() = default;

  

#ifdef ANDROID
  ColorPropNativeComponentState(ColorPropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMMANDS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMMANDS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class CommandNativeComponentState {
public:
  
  CommandNativeComponentState() = default;

  

#ifdef ANDROID
  CommandNativeComponentState(CommandNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMMANDS_AND_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class CommandNativeComponentState {
public:
  
  CommandNativeComponentState() = default;

  

#ifdef ANDROID
  CommandNativeComponentState(CommandNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_ARRAY_OF_OBJECTS_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_ARRAY_OF_OBJECTS_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

#include <react/renderer/components/image/conversions.h>
#include <react/renderer/graphics/Color.h>
#include <react/renderer/graphics/Geometry.h>
#include <react/renderer/imagemanager/primitives.h>
#include <vector>

namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      std::vector<SimpleComponentArrayStateStruct> arrayState)
    : arrayState_(arrayState){};
  SimpleComponentState() = default;

  std::vector<SimpleComponentArrayStateStruct> getArrayState() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    std::vector<SimpleComponentArrayStateStruct> arrayState_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_ARRAY_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_ARRAY_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

#include <cinttypes>
#include <react/renderer/graphics/Color.h>
#include <react/renderer/graphics/Geometry.h>
#include <react/renderer/imagemanager/primitives.h>
#include <vector>

namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      std::vector<std::string> names,
      std::vector<bool> disableds,
      std::vector<int> progress,
      std::vector<Float> radii,
      std::vector<SharedColor> colors,
      std::vector<ImageSource> srcs,
      std::vector<Point> points,
      SimpleComponentSizesMask sizes,
      std::vector<SimpleComponentObjectStruct> object,
      std::vector<SimpleComponentArrayStruct> array,
      std::vector<std::vector<SimpleComponentArrayOfArrayOfObjectStruct>> arrayOfArrayOfObject)
    : names_(names),
      disableds_(disableds),
      progress_(progress),
      radii_(radii),
      colors_(colors),
      srcs_(srcs),
      points_(points),
      sizes_(sizes),
      object_(object),
      array_(array),
      arrayOfArrayOfObject_(arrayOfArrayOfObject){};
  SimpleComponentState() = default;

  std::vector<std::string> getNames() const;
  std::vector<bool> getDisableds() const;
  std::vector<int> getProgress() const;
  std::vector<Float> getRadii() const;
  std::vector<SharedColor> getColors() const;
  std::vector<ImageSource> getSrcs() const;
  std::vector<Point> getPoints() const;
  SimpleComponentSizesMask getSizes() const;
  std::vector<SimpleComponentObjectStruct> getObject() const;
  std::vector<SimpleComponentArrayStruct> getArray() const;
  std::vector<std::vector<SimpleComponentArrayOfArrayOfObjectStruct>> getArrayOfArrayOfObject() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    std::vector<std::string> names_;
    std::vector<bool> disableds_;
    std::vector<int> progress_;
    std::vector<Float> radii_;
    std::vector<SharedColor> colors_;
    std::vector<ImageSource> srcs_;
    std::vector<Point> points_;
    SimpleComponentSizesMask sizes_{static_cast<SimpleComponentSizesMask>(SimpleComponentSizes::Small)};
    std::vector<SimpleComponentObjectStruct> object_;
    std::vector<SimpleComponentArrayStruct> array_;
    std::vector<std::vector<SimpleComponentArrayOfArrayOfObjectStruct>> arrayOfArrayOfObject_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_BOOL_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_BOOL_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      bool disabled)
    : disabled_(disabled){};
  SimpleComponentState() = default;

  bool getDisabled() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    bool disabled_{false};
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_COLOR_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_COLOR_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

#include <react/renderer/graphics/Color.h>

namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      SharedColor tintColor)
    : tintColor_(tintColor){};
  SimpleComponentState() = default;

  SharedColor getTintColor() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    SharedColor tintColor_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_DOUBLE_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_DOUBLE_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      double d_blurRadius,
      double d_blurRadius2,
      double d_blurRadius3)
    : d_blurRadius_(d_blurRadius),
      d_blurRadius2_(d_blurRadius2),
      d_blurRadius3_(d_blurRadius3){};
  SimpleComponentState() = default;

  double getD_blurRadius() const;
  double getD_blurRadius2() const;
  double getD_blurRadius3() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    double d_blurRadius_{0.0};
    double d_blurRadius2_{8.9};
    double d_blurRadius3_{-0.5};
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_EDGE_INSET_STATE_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_EDGE_INSET_STATE_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

#include <react/renderer/graphics/Geometry.h>

namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      EdgeInsets contentInset)
    : contentInset_(contentInset){};
  SimpleComponentState() = default;

  EdgeInsets getContentInset() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    EdgeInsets contentInset_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_FLOAT_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_FLOAT_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      Float blurRadius,
      Float blurRadius2,
      Float blurRadius3)
    : blurRadius_(blurRadius),
      blurRadius2_(blurRadius2),
      blurRadius3_(blurRadius3){};
  SimpleComponentState() = default;

  Float getBlurRadius() const;
  Float getBlurRadius2() const;
  Float getBlurRadius3() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    Float blurRadius_{0.0};
    Float blurRadius2_{7.5};
    Float blurRadius3_{-2.1};
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_IMAGE_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_IMAGE_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

#include <react/renderer/imagemanager/primitives.h>

namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      ImageSource const & thumbImage)
    : thumbImage_(thumbImage){};
  SimpleComponentState() = default;

  ImageSource getThumbImage() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    ImageSource thumbImage_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_INT_ENUM_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_INT_ENUM_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      SimpleComponentMaxInterval maxInterval)
    : maxInterval_(maxInterval){};
  SimpleComponentState() = default;

  SimpleComponentMaxInterval getMaxInterval() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    SimpleComponentMaxInterval maxInterval_{SimpleComponentMaxInterval::MaxInterval0};
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_INT_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_INT_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      int progress1,
      int progress2,
      int progress3)
    : progress1_(progress1),
      progress2_(progress2),
      progress3_(progress3){};
  SimpleComponentState() = default;

  int getProgress1() const;
  int getProgress2() const;
  int getProgress3() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    int progress1_{0};
    int progress2_{-1};
    int progress3_{10};
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_OBJECT_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_OBJECT_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/propsConversions.h>
#include <react/renderer/graphics/Color.h>
#include <react/renderer/graphics/Geometry.h>
#include <react/renderer/imagemanager/primitives.h>
#include <vector>

namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      SimpleComponentObjectPropStruct objectProp)
    : objectProp_(objectProp){};
  SimpleComponentState() = default;

  SimpleComponentObjectPropStruct getObjectProp() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    SimpleComponentObjectPropStruct objectProp_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_POINT_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_POINT_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

#include <react/renderer/graphics/Geometry.h>

namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      Point startPoint)
    : startPoint_(startPoint){};
  SimpleComponentState() = default;

  Point getStartPoint() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    Point startPoint_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_STRING_ENUM_STATE_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_STRING_ENUM_STATE_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      SimpleComponentAlignment alignment)
    : alignment_(alignment){};
  SimpleComponentState() = default;

  SimpleComponentAlignment getAlignment() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    SimpleComponentAlignment alignment_{SimpleComponentAlignment::Center};
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENT_WITH_STRING_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENT_WITH_STRING_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      std::string accessibilityHint,
      std::string accessibilityRole)
    : accessibilityHint_(accessibilityHint),
      accessibilityRole_(accessibilityRole){};
  SimpleComponentState() = default;

  std::string getAccessibilityHint() const;
  std::string getAccessibilityRole() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    std::string accessibilityHint_{\\"\\"};
    std::string accessibilityRole_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture COMPONENTS_WITH_IMAGES_IN_STATE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/COMPONENTS_WITH_IMAGES_IN_STATE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif

#include <react/renderer/imagemanager/ImageRequest.h>
#include <react/renderer/imagemanager/primitives.h>

namespace facebook {
namespace react {

class SimpleComponentState {
public:
  SimpleComponentState(
      ImageSource const & imageSource,
      ImageRequest imageRequest)
    : imageSource_(imageSource),
      imageRequest_(std::make_shared<ImageRequest>(std::move(imageRequest))){};
  SimpleComponentState() = default;

  ImageSource getImageSource() const;
  ImageRequest const & getImageRequest() const;
  

#ifdef ANDROID
  SimpleComponentState(SimpleComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
    ImageSource imageSource_;
    std::shared_ptr<ImageRequest> imageRequest_;
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/DOUBLE_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class DoublePropNativeComponentState {
public:
  
  DoublePropNativeComponentState() = default;

  

#ifdef ANDROID
  DoublePropNativeComponentState(DoublePropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class EventsNestedObjectNativeComponentState {
public:
  
  EventsNestedObjectNativeComponentState() = default;

  

#ifdef ANDROID
  EventsNestedObjectNativeComponentState(EventsNestedObjectNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EVENT_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EVENT_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class EventsNativeComponentState {
public:
  
  EventsNativeComponentState() = default;

  

#ifdef ANDROID
  EventsNativeComponentState(EventsNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {



} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EXCLUDE_ANDROID/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ExcludedAndroidComponentState {
public:
  
  ExcludedAndroidComponentState() = default;

  

#ifdef ANDROID
  ExcludedAndroidComponentState(ExcludedAndroidComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EXCLUDE_ANDROID_IOS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ExcludedAndroidIosComponentState {
public:
  
  ExcludedAndroidIosComponentState() = default;

  

#ifdef ANDROID
  ExcludedAndroidIosComponentState(ExcludedAndroidIosComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ExcludedIosComponentState {
public:
  
  ExcludedIosComponentState() = default;

  

#ifdef ANDROID
  ExcludedIosComponentState(ExcludedIosComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

class MultiFileIncludedNativeComponentState {
public:
  
  MultiFileIncludedNativeComponentState() = default;

  

#ifdef ANDROID
  MultiFileIncludedNativeComponentState(MultiFileIncludedNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture FLOAT_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/FLOAT_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class FloatPropNativeComponentState {
public:
  
  FloatPropNativeComponentState() = default;

  

#ifdef ANDROID
  FloatPropNativeComponentState(FloatPropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture IMAGE_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/IMAGE_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ImagePropNativeComponentState {
public:
  
  ImagePropNativeComponentState() = default;

  

#ifdef ANDROID
  ImagePropNativeComponentState(ImagePropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture INSETS_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/INSETS_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class InsetsPropNativeComponentState {
public:
  
  InsetsPropNativeComponentState() = default;

  

#ifdef ANDROID
  InsetsPropNativeComponentState(InsetsPropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/INT32_ENUM_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class Int32EnumPropsNativeComponentState {
public:
  
  Int32EnumPropsNativeComponentState() = default;

  

#ifdef ANDROID
  Int32EnumPropsNativeComponentState(Int32EnumPropsNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture INTEGER_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/INTEGER_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class IntegerPropNativeComponentState {
public:
  
  IntegerPropNativeComponentState() = default;

  

#ifdef ANDROID
  IntegerPropNativeComponentState(IntegerPropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/INTERFACE_ONLY/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {



} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/MULTI_NATIVE_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ImageColorPropNativeComponentState {
public:
  
  ImageColorPropNativeComponentState() = default;

  

#ifdef ANDROID
  ImageColorPropNativeComponentState(ImageColorPropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/NO_PROPS_NO_EVENTS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class NoPropsNoEventsComponentState {
public:
  
  NoPropsNoEventsComponentState() = default;

  

#ifdef ANDROID
  NoPropsNoEventsComponentState(NoPropsNoEventsComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture OBJECT_PROPS 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/OBJECT_PROPS/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class ObjectPropsState {
public:
  
  ObjectPropsState() = default;

  

#ifdef ANDROID
  ObjectPropsState(ObjectPropsState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture POINT_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/POINT_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class PointPropNativeComponentState {
public:
  
  PointPropNativeComponentState() = default;

  

#ifdef ANDROID
  PointPropNativeComponentState(PointPropNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/STRING_ENUM_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class StringEnumPropsNativeComponentState {
public:
  
  StringEnumPropsNativeComponentState() = default;

  

#ifdef ANDROID
  StringEnumPropsNativeComponentState(StringEnumPropsNativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture STRING_PROP 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/STRING_PROP/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class StringPropComponentState {
public:
  
  StringPropComponentState() = default;

  

#ifdef ANDROID
  StringPropComponentState(StringPropComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class MultiFile1NativeComponentState {
public:
  
  MultiFile1NativeComponentState() = default;

  

#ifdef ANDROID
  MultiFile1NativeComponentState(MultiFile1NativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

class MultiFile2NativeComponentState {
public:
  
  MultiFile2NativeComponentState() = default;

  

#ifdef ANDROID
  MultiFile2NativeComponentState(MultiFile2NativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;

exports[`GenerateStateH can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "States.h" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateH.js
 */
#pragma once

#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/Props.h>

#ifdef ANDROID
#include <folly/dynamic.h>
#include <react/renderer/mapbuffer/MapBuffer.h>
#include <react/renderer/mapbuffer/MapBufferBuilder.h>
#endif



namespace facebook {
namespace react {

class MultiComponent1NativeComponentState {
public:
  
  MultiComponent1NativeComponentState() = default;

  

#ifdef ANDROID
  MultiComponent1NativeComponentState(MultiComponent1NativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

class MultiComponent2NativeComponentState {
public:
  
  MultiComponent2NativeComponentState() = default;

  

#ifdef ANDROID
  MultiComponent2NativeComponentState(MultiComponent2NativeComponentState const &previousState, folly::dynamic data){};
  folly::dynamic getDynamic() const {
    return {};
  };
  MapBuffer getMapBuffer() const {
    return MapBufferBuilder::EMPTY();
  };
#endif

private:
  
};

} // namespace react
} // namespace facebook",
}
`;
